--- a/src/Omnius.Lxna.Ui.Desktop/View/Windows/PicturePreview/PicturePreviewWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/View/Windows/PicturePreview/PicturePreviewWindow.axaml
@@ -9,6 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
     Title="Picture Preview"
+    WindowStartupLocation="Manual"
     x:CompileBindings="True"
     x:DataType="local:PicturePreviewWindowModelBase"
     FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
