--- a/src/Omnius.Lxna.Ui.Desktop/View/Styles/TreeCheck.xaml
+++ b/src/Omnius.Lxna.Ui.Desktop/View/Styles/TreeCheck.xaml
@@ -17,12 +17,12 @@
             </StackPanel.Styles>
 
             <Label Classes="separator" Content="TreeListView" />
-            <CheckBox Classes="Tree" />
+            <CheckBox Classes="TreeCheck" />
 
         </StackPanel>
     </Design.PreviewWith>
 
-    <Style Selector="CheckBox.Tree">
+    <Style Selector="CheckBox.TreeCheck">
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Name="Root"
