--- a/src/Omnius.Lxna.Ui.Desktop/View/Windows/Preview/PreviewWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/View/Windows/Preview/PreviewWindow.axaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="Omnius.Lxna.Ui.Desktop.View.Windows.PicturePreviewWindow"
+    x:Class="Omnius.Lxna.Ui.Desktop.View.Windows.PreviewWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,13 +11,11 @@
     Title="Picture Preview"
     WindowStartupLocation="Manual"
     x:CompileBindings="True"
-    x:DataType="local:PicturePreviewWindowModelBase"
+    x:DataType="local:PreviewWindowModelBase"
     FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
     mc:Ignorable="d">
 
-    <DockPanel>
-        <Grid>
-            <Image Source="{Binding Source.Value}" />
-        </Grid>
-    </DockPanel>
+    <Panel x:Name="Panel">
+        <Image x:Name="Image" Source="{Binding Source.Value}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+    </Panel>
 </Window>
