--- a/src/Omnius.Lxna.Ui.Desktop/App.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/App.axaml
@@ -1,8 +1,12 @@
 <Application xmlns="https://github.com/avaloniaui"
-            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-            xmlns:styling="clr-namespace:FluentAvalonia.Styling;assembly=FluentAvalonia"
-            x:Class="Omnius.Lxna.Ui.Desktop.App"
-            xmlns:sys="clr-namespace:System;assembly=mscorlib">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:conv="clr-namespace:Omnius.Lxna.Ui.Desktop.View.Converters"
+        xmlns:styling="clr-namespace:FluentAvalonia.Styling;assembly=FluentAvalonia"
+        x:Class="Omnius.Lxna.Ui.Desktop.App"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib">
+    <Application.Resources>
+        <conv:PlusOneValueConverter x:Key="PlusOneValueConverter"/>
+    </Application.Resources>
     <Application.Styles>
         <styling:FluentAvaloniaTheme PreferUserAccentColor="True" UseSystemFontOnWindows="True" TextVerticalAlignmentOverrideBehavior="Disabled"/>
         <StyleInclude Source="avares://FluentAvalonia.ProgressRing/Styling/Controls/ProgressRing.axaml" />
