--- a/src/Omnius.Lxna.Ui.Desktop/View/Styles/SideBar.xaml
+++ b/src/Omnius.Lxna.Ui.Desktop/View/Styles/SideBar.xaml
@@ -36,6 +36,7 @@
         <Setter Property="(ScrollViewer.VerticalScrollBarVisibility)" Value="Hidden" />
     </Style>
     <Style Selector="DockPanel.Sidebar > ListBox > ListBoxItem">
+        <Setter Property="FontSize" Value="13" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -51,6 +52,7 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
     <Style Selector="DockPanel.Sidebar > Button">
+        <Setter Property="FontSize" Value="13" />
         <Setter Property="Height" Value="70" />
         <Setter Property="Width" Value="84" />
         <Setter Property="Margin" Value="2" />
