--- a/src/Omnius.Lxna.Ui.Desktop/View/Windows/Settings/SettingsWindow.xaml
+++ b/src/Omnius.Lxna.Ui.Desktop/View/Windows/Settings/SettingsWindow.xaml
@@ -14,43 +14,32 @@
     d:DesignWidth="800"
     x:CompileBindings="True"
     x:DataType="local:SettingsWindowModelBase"
-    Background="{x:Null}"
-    ExtendClientAreaTitleBarHeightHint="-1"
-    ExtendClientAreaToDecorationsHint="True"
-    ExtendClientAreaChromeHints="PreferSystemChrome"
     FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
-    TransparencyLevelHint="AcrylicBlur"
     mc:Ignorable="d">
 
     <Design.DataContext>
         <local:SettingsWindowDesignModel />
     </Design.DataContext>
 
-    <Panel Margin="{Binding $parent[Window].OffScreenMargin}">
-        <ExperimentalAcrylicBorder IsHitTestVisible="False">
-            <ExperimentalAcrylicBorder.Material>
-                <ExperimentalAcrylicMaterial TintColor="Black" MaterialOpacity="0.85" TintOpacity="1" />
-            </ExperimentalAcrylicBorder.Material>
-        </ExperimentalAcrylicBorder>
-        <DockPanel>
-            <StackPanel Height="32" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Stretch"
-                Orientation="Horizontal" IsHitTestVisible="False" Background="{x:Null}">
-                <skp:Svg Path="/Assets/Lxna.svg" Margin="8,4" Width="14" VerticalAlignment="Center"/>
-                <TextBlock Text="{Binding $parent[Window].Title}" VerticalAlignment="Center" FontSize="14"/>
-            </StackPanel>
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Bottom" Margin="16" Spacing="12" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Classes="Flat Accent" Content="Ok" Command="{Binding OkCommand}" CommandParameter="{Binding $parent[Window]}" MinWidth="100" />
+            <Button Classes="Flat" Content="Cancel" Command="{Binding CancelCommand}" CommandParameter="{Binding $parent[Window]}" MinWidth="100" />
+        </StackPanel>
 
-            <DockPanel>
-                <StackPanel DockPanel.Dock="Bottom" Margin="16" Spacing="12" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Classes="Flat Accent" Content="Ok" Command="{Binding OkCommand}" CommandParameter="{Binding $parent[Window]}" MinWidth="64" />
-                    <Button Classes="Flat" Content="Cancel" Command="{Binding CancelCommand}" CommandParameter="{Binding $parent[Window]}" MinWidth="64" />
-                </StackPanel>
-
-                <TreeView DockPanel.Dock="Left">
-                </TreeView>
-
-                <Panel DockPanel.Dock="Right" Margin="16,16,16,0">
+        <Grid DockPanel.Dock="Top" ColumnDefinitions="180,*">
+            <TreeView Grid.Column="0">
+                <TreeViewItem Name="ThumbnailTreeViewItem" Header="Thumbnail" IsSelected="True" />
+                <TreeViewItem Name="PreviewTreeViewItem" Header="Preview" />
+            </TreeView>
+            <Panel Grid.Column="1" Margin="16,16,16,0">
+                <Panel IsVisible="{Binding #ThumbnailTreeViewItem.IsSelected}">
+                    <TextBlock Text="Thumbnail" />
                 </Panel>
-            </DockPanel>
-        </DockPanel>
-    </Panel>
+                <Panel IsVisible="{Binding #PreviewTreeViewItem.IsSelected}">
+                    <TextBlock Text="Preview" />
+                </Panel>
+            </Panel>
+        </Grid>
+    </DockPanel>
 </Window>
