--- a/src/Lxna.Ui.Desktop/View/Windows/Main/MainWindow.axaml
+++ b/src/Lxna.Ui.Desktop/View/Windows/Main/MainWindow.axaml
@@ -9,6 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
     Title="Lxna"
+    Icon="/Assets/lxna.ico"
     WindowStartupLocation="Manual"
     d:DesignHeight="600"
     d:DesignWidth="800"
