--- a/src/Lxna.Ui.Desktop/View/Windows/Settings/SettingsWindow.xaml
+++ b/src/Lxna.Ui.Desktop/View/Windows/Settings/SettingsWindow.xaml
@@ -9,6 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
     Title="Settings"
+    Icon="/Assets/lxna.ico"
     WindowStartupLocation="Manual"
     d:DesignHeight="500"
     d:DesignWidth="800"
