--- a/src/Lxna.Ui.Desktop/View/Windows/Main/Explorer/ExplorerView.axaml
+++ b/src/Lxna.Ui.Desktop/View/Windows/Main/Explorer/ExplorerView.axaml
@@ -1,12 +1,12 @@
-<UserControl x:Class="Lxna.Ui.Desktop.View.Windows.ExplorerView"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.View.Windows.ExplorerView"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
         xmlns:ir="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.ItemsRepeater"
         xmlns:pr="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia.ProgressRing"
-        xmlns:local="clr-namespace:Lxna.Ui.Desktop.View.Windows;assembly=Lxna.Ui.Desktop"
-        xmlns:c="clr-namespace:Core.Avalonia.Converters;assembly=Core.Avalonia"
+        xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.View.Windows;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:c="clr-namespace:Omnius.Core.Avalonia.Converters;assembly=Omnius.Core.Avalonia"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:CompileBindings="True"
