--- a/src/Lxna.Ui.Desktop/App.axaml
+++ b/src/Lxna.Ui.Desktop/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:conv="clr-namespace:Lxna.Ui.Desktop.View.Converters"
+        xmlns:conv="clr-namespace:Omnius.Lxna.Ui.Desktop.View.Converters"
         xmlns:styling="clr-namespace:FluentAvalonia.Styling;assembly=FluentAvalonia"
-        x:Class="Lxna.Ui.Desktop.App"
+        x:Class="Omnius.Lxna.Ui.Desktop.App"
         xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
         <conv:PlusOneValueConverter x:Key="PlusOneValueConverter"/>
