--- a/src/Lxna.Ui.Desktop/View/Windows/Main/MainWindow.axaml
+++ b/src/Lxna.Ui.Desktop/View/Windows/Main/MainWindow.axaml
@@ -1,11 +1,11 @@
 <Window
-    x:Class="Lxna.Ui.Desktop.View.Windows.MainWindow"
+    x:Class="Omnius.Lxna.Ui.Desktop.View.Windows.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-    xmlns:local="clr-namespace:Lxna.Ui.Desktop.View.Windows"
+    xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.View.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
     Title="Lxna"
